gcc/testsuite/rust/rustc/ui/fmt/issue-91556_dg.rs
fn main() {
  let _ = format!(concat!("{0}ğ–³ğ–¾ğ—Œğ—{"), i);
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-note "" "" { target *-*-* } .-2 }
// { dg-note "" "" { target *-*-* } .-3 }
// { dg-note "" "" { target *-*-* } .-4 }
// { dg-note "" "" { target *-*-* } .-5 }
}

